2010-07-12 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/calendar/calendar.tcl: new comments added. Fixed misspelled -errorinfo option
    in a return statement.
    * rivet/packages/session/session-create.sql: columns 'key' and 'package' are renamed as 'key_" and
    'package_'.
    * rivet/packages/dio/dio_Postgresql.tcl: fixed typo in variable name 
    * doc/xml/calendar.xml: More correction made on calendar.xml
    * doc/html/*.html: The whole manual has been rebuilt with the latest changes

2010-07-07 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: improved installation instructions before merging trunk into branches/2_0

2010-07-03 Massimo Manghi <mxmanghi@apache.org>
    * rivet/package/calendar/calendar.tcl: Add check on tcl version. If Tcl8.4 is being used
    we also need 'dict' backport as Calendar uses a dictionary to store some internal
    data.
    * doc/xml/calendar.xml: Wrong header corrected. Added explicit note about the requirements
    of the package

2010-07-03 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/calendar/calendar.tcl: Fixed indentation in weekdays row
    * doc/html/: Manual pages regenerated to include latest changes in section about package Calendar

2010-07-02 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/calendar/calendar.tcl: Add experimental package Calendar

2010-07-02 Massimo Manghi <mxmanghi@apache.org>
    * doc/html/calendar.html, doc/html/xml_calendar.html: Add html manual pages for Calendar
    * doc/xml/calendar.xml: more changes to calendar.xml

2010-07-02 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/calendar.xml: Add manual page for package Calendar (package still to be
      added to repository)
    * doc/xml/form.xml: Page for package 'form' written with a more structured
      docbook organization that allows finer styling of a manual page.
    * doc/rivet.xsl: Add xsl configurations for elements refsect1,refsect2 and
      refsect3